synaptic (0.61ubuntu8) hardy; urgency=low

  * pixmaps/hicolor/16x16/package-purge.png:
    - make the icon different from the "remove" icon

 --

synaptic (0.61ubuntu7) hardy; urgency=low

  * do not auto-close on package install errors when run with
    closeZvt=true (LP: #183209)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 03 Mar 2008 15:05:55 +0100

synaptic (0.61ubuntu6) hardy; urgency=low

  * recommend software-properties-gtk

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 21 Feb 2008 11:33:11 +0100

synaptic (0.61ubuntu5) hardy; urgency=low

  [ Brian Murray ]
  * typo fixes (LP: #64482, LP: #157850, LP: #179914, LP: #179912, LP: #179909)

  [ Michael Vogt ]
  * add new RFilePackageFilter 
  * added default custom filter that shows installed community software
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Feb 2008 22:54:39 +0100

synaptic (0.61ubuntu4) hardy; urgency=low

  * fix incorect transient settings when run with --no-main-window
    (thanks to Robert Colins for reporting)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 31 Jan 2008 10:51:31 +0100

synaptic (0.61ubuntu3) hardy; urgency=low

  * use new ListUpdate() code from apt

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Jan 2008 21:20:49 +0100

synaptic (0.61ubuntu2) hardy; urgency=low

  * debian/rules, debian/control:
    - use dh_icons and add appropriate b-d on debhelper
  * g++ 4.3 fixes (closes: #456044)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Dec 2007 20:48:57 +0100

synaptic (0.61ubuntu1) hardy; urgency=low

  * merged from debian/unstable, remaining changes:
    - ubuntu icons for supported applications
    - maintained filed changed
    - launchpad-integration
    - build against latest apt in ubuntu
    - support section metapackages
    - x-ubuntu-gettext-domain in desktop file

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Dec 2007 15:49:12 +0100

synaptic (0.61) unstable; urgency=low

  [ Michael Vogt ]