@@ -2,6 +2,9 @@ synaptic (0.61ubuntu8) hardy; urgency=low
 
   * pixmaps/hicolor/16x16/package-purge.png:
     - make the icon different from the "remove" icon
+  * gtk/rgsummarywindow.cc:
+    - code cleanup and fix potential endless loop (thanks to
+      Sebastien Bacher)
 
  --
 
